--- a/Store/Store/ClientApp/app/components/order/order.component.html
+++ b/Store/Store/ClientApp/app/components/order/order.component.html
@@ -1,10 +1,14 @@
-﻿<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8" />
-    <title></title>
-</head>
-<body>
+﻿<app-messages></app-messages>
+<!-- We use the async pipe to automatically subscribe/unsubscribe to our observable -->
+<ul class="list-group" *ngIf="(orders$ | async).length">
+    <li class="list-group-item" *ngFor="let order of orders$ | async">
+        {{ order.city }}, {{ order.addressName }}
+        <a routerLink="/detail/{{order.trackingId}}"></a>
+    </li>
+</ul>
 
-</body>
-</html>
+<nav>
+    <a routerLink="/users">Orders</a>
+</nav>
+
+<button (click)="save()">save</button>
