--- a/Store/Store/ClientApp/app/components/user/user.component.html
+++ b/Store/Store/ClientApp/app/components/user/user.component.html
@@ -1,25 +1,19 @@
-﻿<app-messages></app-messages>
-<!-- We use the async pipe to automatically subscribe/unsubscribe to our observable -->
-<ul class="user__list" *ngIf="(users$ | async).length">
-    <li class="user" *ngFor="let user of users$ | async">
-        {{ user.firstName }}, {{ user.lastName }}
-        <a routerLink="/detail/{{user.id}}"></a>
-      </li>
-</ul>
-
-<nav>
-    <a routerLink="/orders">Orders</a>
-</nav>
-
-<button (click)="save()">save</button>
-
-<div>
-    <label>
-        First Name:
-        <input #firstName />
-    </label>
-    <!-- (click) passes input value to add() and then clears the input -->
-    <button (click)="add(firstName.value); firstName.value=''">
-        add
-    </button>
-</div>
+﻿<table class='table' *ngIf="(users$ | async).length">
+    <thead>
+        <tr>
+            <th>First Name</th>
+            <th>Last Name</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr *ngFor="let user of users$ | async">
+            <td> {{ user.firstName }} </td>
+            <td> {{ user.lastName }} </td>
+            <td>
+                <a routerLink="/detail/{{user.id}}">Detail</a> |
+                <a (click)="edit()">Edit</a> |
+                <a (click)="delete()">Delete</a>
+            </td>
+        </tr>
+    </tbody>
+</table>
