--- a/Store/Store/ClientApp/app/components/order/order.component.html
+++ b/Store/Store/ClientApp/app/components/order/order.component.html
@@ -6,16 +6,26 @@
 
 
 
-<div>
-    <label>
-        Search:
-        <input #filter />
-    </label>
-    <!-- (click) passes input value to add() and then clears the input -->
-
+<div class="row control-box">
+    <div class="col-sm-8">
+        <div class="form-group search-box">
+            <search-box (searchChange)="onSearchChanged($event)" placeholder="Search Order"></search-box>
+        </div>
+    </div>
+    <div class="col-sm-4">
+        <div class="navbar action-box">
+            <ul class="nav navbar-nav">
+                <li class="toolbaritem"><a href="javascript:;" (click)="addTask()"><i class="fa fa-plus"></i>Add Order</a></li>
+            </ul>
+        </div>
+    </div>
 </div>
 
-<table class='table'  *ngIf="(orders$ | async).length">
+<div class="row">
+    <input class="span4 pull-right" type="text" placeholder="Search order" ngModel="query">
+</div>
+<div class="row">
+<table class="table table-striped table-bordered table-hover"  *ngIf="(orders$ | async).length">
     <thead>
         <tr>
             <th>Tracking Id</th>
@@ -25,6 +35,7 @@
             <th>City</th>
             <th>State</th>
             <th>Zip Code</th>
+            <th>Crud</th>
         </tr>
     </thead>
     <tbody>
@@ -44,4 +55,63 @@
         </tr>
     </tbody>
 </table>
+ </div>
 
+<!--<div class="modal fade" bsModal #editorModal="bs-modal" tabindex="-1">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h4 class="modal-title pull-left"><i class="fa fa-tasks"></i> {{'todoDemo.editor.NewTask' | translate}}</h4>
+                <button type="button" class="close pull-right" title="Close" (click)="editorModal.hide()">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <form *ngIf="formResetToggle" class="form-horizontal" name="taskEditorForm" #f="ngForm" novalidate
+                      (ngSubmit)="f.form.valid ? save() :
+                      (!taskName.valid && showErrorAlert('Task name is required', 'Please enter a name for the task'));">
+
+
+                    <div class="form-group has-feedback">
+                        <label class="control-label col-md-2" for="taskName">{{'todoDemo.editor.Name' | translate}}:</label>
+                        <div class="col-md-10" [ngClass]="{'has-success': f.submitted && taskName.valid, 'has-error' : f.submitted && !taskName.valid}">
+                            <input autofocus type="text" id="taskName" name="taskName" placeholder="Enter task name" class="form-control" [(ngModel)]="taskEdit.name" #taskName="ngModel" required />
+                            <span *ngIf="f.submitted" class="glyphicon form-control-feedback" [ngClass]="{'glyphicon-ok ':taskName.valid, 'glyphicon-remove' : !taskName.valid}"></span>
+                            <span *ngIf="f.submitted && !taskName.valid" class="errorMessage">
+                                {{'todoDemo.editor.TaskNameRequired' | translate}}
+                            </span>
+                        </div>
+                    </div>
+
+                    <div class="form-group description-form-group">
+                        <label class="control-label col-md-2" for="taskDescription">{{'todoDemo.editor.Description' | translate}}:</label>
+                        <div class="col-md-10">
+                            <input type="text" id="taskDescription" name="taskDescription" placeholder="Enter task description" class="form-control" [(ngModel)]="taskEdit.description" />
+                        </div>
+                    </div>
+                    <label class="control-label col-md-2"> </label>
+                    <div class="col-md-7">
+                        <div class="checkbox">
+                            <label>
+                                <input name="isImportant" type="checkbox" [(ngModel)]="taskEdit.important">
+                                {{'todoDemo.editor.Important' | translate}}
+                            </label>
+                        </div>
+                    </div>
+
+                    <div class="col-md-12">
+                        <hr class="edit-last-separator-hr" />
+                    </div>
+
+
+                    <div class="form-group actionBtn-form-group">
+                        <div class="pull-right">
+                            <button type="submit" class="btn btn-primary">Submit</button>
+                        </div>
+                    </div>
+                    <div class="clearfix"></div>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>-->
