--- a/Store/Store/ClientApp/app/components/user/user.component.html
+++ b/Store/Store/ClientApp/app/components/user/user.component.html
@@ -1,14 +1,17 @@
-﻿<table class='table' *ngIf="(users$ | async).length">
+﻿<div class="row">
+<table class="table table-striped table-bordered table-hover" *ngIf="(users$ | async).length">
     <thead>
         <tr>
             <th>First Name</th>
             <th>Last Name</th>
+            <th>Crud</th>
         </tr>
     </thead>
     <tbody>
         <tr *ngFor="let user of users$ | async">
             <td> {{ user.firstName }} </td>
             <td> {{ user.lastName }} </td>
+            
             <td>
                 <a routerLink="/detail/{{user.id}}">Detail</a> |
                 <a (click)="edit()">Edit</a> |
@@ -17,3 +20,4 @@
         </tr>
     </tbody>
 </table>
+</div>
