--- a/Store/Store/ClientApp/app/components/user/user.component.html
+++ b/Store/Store/ClientApp/app/components/user/user.component.html
@@ -1,10 +1,36 @@
-﻿<div class="row">
+﻿
+<div class="row">
+    <div class="col-md-12 text-left">
+        <h2>Our Users</h2>
+    </div>
+</div>
+
+
+<app-messages></app-messages>
+<!-- We use the async pipe to automatically subscribe/unsubscribe to our observable -->
+
+
+
+<div class="row control-box">
+    <div class="col-sm-4 text-left">
+        <div class="navbar action-box">
+            <button  class="btn btn-primary" (click)="AddUser()"> Add User </button>
+        </div>
+    </div>
+    <div class="col-sm-8 text-right">
+        <div class="form-group search-box">
+            <input type="text" class="form-control" id="searchUser" placeholder="Search Users .." />
+        </div>
+    </div>
+
+</div>
+
 <table class="table table-striped table-bordered table-hover" *ngIf="(users$ | async).length">
     <thead>
         <tr>
             <th>First Name</th>
             <th>Last Name</th>
-            <th>Crud</th>
+            <th>Operations</th>
         </tr>
     </thead>
     <tbody>
@@ -20,4 +46,3 @@
         </tr>
     </tbody>
 </table>
-</div>
