--- a/Store/Store/ClientApp/app/components/order/order.component.html
+++ b/Store/Store/ClientApp/app/components/order/order.component.html
@@ -1,6 +1,6 @@
 ﻿<div class="row">
     <div class="col-md-12 text-left">
-        <h2>Our Orders</h2>
+       <h2>Our Order</h2>
     </div>
 </div>
 
@@ -14,7 +14,7 @@
     <div class="col-sm-4 text-left">
         <div class="navbar action-box">
             <button type="button" class="btn btn-primary" (click)="addOrderModal.show()">Add Order</button>
-           
+
         </div>
     </div>
     <div class="col-sm-8 text-right">
@@ -22,40 +22,41 @@
             <input type="text" class="form-control" id="searchOrder" placeholder="Search Orders .." />
         </div>
     </div>
-    
+
 </div>
-<div  *ngIf="orders.length">
-<table class="table table-striped table-bordered table-hover">
-    <thead>
-        <tr>
-            <th>Tracking Id</th>
-            <th>User ID</th>
-            <th>Address Name</th>
-            <th>Street Address</th>
-            <th>City</th>
-            <th>State</th>
-            <th>Zip Code</th>
-            <th>Operations</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr *ngFor="let order of orders">
-            <td> {{ order.trackingId}} </td>
-            <td> {{ order.userId }} </td>
-            <td> {{ order.addressName}} </td>
-            <td> {{ order.streetAddress}} </td>
-            <td> {{ order.city }} </td>
-            <td> {{ order.state }} </td>
-            <td> {{ order.zipCode}} </td>
-            <td>
-                <a routerLink="/detail/{{ order.trackingId }}">Detail</a> |
-                <a (click)="edit()">Edit</a> |
-                <a (click)="delete()">Delete</a>
-            </td>
-        </tr>
-    </tbody>
-</table>
+<div *ngIf="orders.length">
+    <table class="table table-striped table-bordered table-hover">
+        <thead>
+            <tr>
+                <th>Tracking Id</th>
+                <th>User ID</th>
+                <th>Address Name</th>
+                <th>Street Address</th>
+                <th>City</th>
+                <th>State</th>
+                <th>Zip Code</th>
+                <th>Operations</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr *ngFor="let order of orders">
+                <td> {{ order.trackingId}} </td>
+                <td> {{ order.userId }} </td>
+                <td> {{ order.addressName}} </td>
+                <td> {{ order.streetAddress}} </td>
+                <td> {{ order.city }} </td>
+                <td> {{ order.state }} </td>
+                <td> {{ order.zipCode}} </td>
+                <td>
+                    <button type="btn" (click)="model=order; orderDetailModal.show()">Detail</button> |
+                    <button type="btn" (click)="model=order; updateOrderModal.show()">Update</button> |
+                    <a (click)="delete()">Delete</a>
+                </td>
+            </tr>
+        </tbody>
+    </table>
 </div>
+<!--ADD NEW ORDER-->
 <div class="modal fade" bsModal #addOrderModal="bs-modal" [config]="{backdrop: 'static'}"
      tabindex="-1" role="dialog">
     <div class="modal-dialog modal-md">
@@ -155,6 +156,188 @@
                             Cancel
                         </button>
                         <button type="submit" class=" btn btn-success" [disabled]="!orderForm.form.valid">Submit</button>
+                    </div>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
+
+<!--Show Detail of the current order-->
+<div class="modal fade" bsModal #orderDetailModal="bs-modal" [config]="{backdrop: 'static'}"
+     tabindex="-1" role="dialog">
+    <div class="modal-dialog modal-md">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h4 class="modal-title pull-left">Order: {{ model.user.lastName}}, {{ model.user.firstName}}</h4>
+                <button type="button" class="close pull-right" aria-label="Close" (click)="orderDetailModal.hide()">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="well">
+            <ul>
+                <li>
+                    <label>
+                        Tracking Id:</label>
+                         {{ model.trackingId }}
+                </li>
+               
+                <li>
+                    <label>
+                        Street Name:</label>
+                         {{ model.addressName }}
+                </li>
+                <li>
+                    <label>
+                        Street Address:</label>
+                         {{ model.streetAddress }}
+                </li>
+                <li>
+                    <label>
+                        City:</label>
+                         {{ model.city }}
+                </li>
+                <li>
+                    <label>
+                        State:</label>
+                         {{ model.state }}
+                </li>
+                <li>
+                    <label>
+                        Zip Code:</label>
+                         {{ model.zipCode }}
+                </li>
+            </ul>
+                <h2> Associated User</h2>
+                <ul>
+                <dt>
+                    <label>
+                        User:
+                    </label>
+                    {{ model.user.firstName }}
+                </dt>
+                    </ul>
+                <ul>
+                <dt>
+                    <label>
+                        User:
+                    </label>
+                    {{ model.user.lastName }}
+                </dt>
+                    </ul>
+        </div>
+            <div class="row">
+            <div class=" col-md-12 text-center">
+                <button type="button"
+                        class="btn" (click)="orderDetailModal.hide()">
+                    Cancel
+                </button>
+              </div>
+             </div>
+        </div>
+    </div>
+</div>
+
+<!--Update Order-->
+<div class="modal fade" bsModal #updateOrderModal="bs-modal" [config]="{backdrop: 'static'}"
+     tabindex="-1" role="dialog">
+    <div class="modal-dialog modal-md">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h4 class="modal-title pull-left">Update Order</h4>
+                <button type="button" class="close pull-right" aria-label="Close" (click)="updateOrderModal.hide()">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+
+            <form class="well" (ngSubmit)="updateOrderModal.hide(); updateOrder(model);" #orderForm="ngForm">
+                <div class="form-group">
+                    <label class="required" for="trackingId">Tracking Id</label>
+                    <input type="text" class="form-control" id="trackingId" placeholder="123978"
+                           required
+                           [(ngModel)]="model.trackingId"
+                           #trackingId="ngModel"
+                           name="trackingId">
+                    <div [hidden]="trackingId.valid || trackingId.pristine"
+                         class="alert alert-danger">
+                        Tracking Id is required
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label class="required" for="userId">User</label>
+                    <input type="text" class="form-control" id="userId" placeholder="DropDown"
+                           required
+                           [(ngModel)]="model.userId"
+                           #userId="ngModel"
+                           name="userId">
+                    <div [hidden]="userId.valid || userId.pristine"
+                         class="alert alert-danger">
+                        Every order must be associated with a user
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="addressName">Street Name</label>
+                    <input type="text" class="form-control" id="addressName" placeholder="Mobius"
+                           required
+                           [(ngModel)]="model.addressName"
+                           #addressName="ngModel"
+                           name="addressName">
+                </div>
+                <div class="form-group">
+                    <label class="required" for="streetAddress">Street Address</label>
+                    <input type="text" class="form-control" id="streetAddress" placeholder="123978"
+                           required
+                           [(ngModel)]="model.streetAddress"
+                           #streetAddress="ngModel"
+                           name="streetAddress">
+                    <div [hidden]="streetAddress.valid || streetAddress.pristine"
+                         class="alert alert-danger">
+                        Street Address is required
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label class="required" for="city">City</label>
+                    <input type="text" class="form-control" id="city" placeholder="City"
+                           required
+                           [(ngModel)]="model.city"
+                           #city="ngModel"
+                           name="city">
+                    <div [hidden]="city.valid || city.pristine"
+                         class="alert alert-danger">
+                        City is required
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label class="required" for="state">State</label>
+                    <input type="text" class="form-control" id="state" placeholder="123978"
+                           required
+                           [(ngModel)]="model.state"
+                           #state="ngModel"
+                           name="state">
+                    <div [hidden]="state.valid || state.pristine"
+                         class="alert alert-danger">
+                        State is required
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label class="required" for="zipCode">Zip Code</label>
+                    <input type="text" class="form-control" id="zipCode" placeholder="616263"
+                           required
+                           [(ngModel)]="model.zipCode"
+                           #zipCode="ngModel"
+                           name="zipCode">
+                    <div [hidden]="zipCode.valid || zipCode.pristine"
+                         class="alert alert-danger">
+                        Zip Code is required
+                    </div>
+                </div>
+                <div class=" row">
+                    <div class=" col-md-12 text-center">
+                        <button type="button"
+                                class="btn" (click)="updateOrderModal.hide()">
+                            Cancel
+                        </button>
+                        <button type="submit" class=" btn btn-success" [disabled]="!orderForm.form.valid">Update</button>
                     </div>
                 </div>
             </form>
